--- a/wholesale.html
+++ b/wholesale.html
@@ -27,7 +27,7 @@
                         <th>Select</th>
                         <th>PID</th>
                         <th>Product Name</th>
-                        <th>PackSize</th>
+                        <th>Brand Name</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
